--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@types/node": "20.4.2",
     "jest": "^29.6.1",
     "ts-jest": "^29.1.1",
-    "aws-cdk": "2.88.0",
     "ts-node": "^10.9.1",
     "typescript": "~5.1.6"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.88.0",
+    "aws-cdk": "^2.114.1",
+    "aws-cdk-lib": "^2.114.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
